<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.jun_zheng.imageeditor.editor.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:text="@string/text"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/filterSelect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/filterClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"
            app:srcCompat="@drawable/baseline_close_black_24dp" />

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photoEditorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:photo_src="@{viewModel.selectedProperty.url}"
            tools:layout_editor_absoluteX="16dp">

        </ja.burhanrashid52.photoeditor.PhotoEditorView>

        <HorizontalScrollView
            android:id="@+id/filterSelect"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/none" />

                <Button
                    android:id="@+id/auto_fix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_fix" />

                <Button
                    android:id="@+id/blackWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/black_white" />

                <Button
                    android:id="@+id/fishEye"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fish_eye" />

                <Button
                    android:id="@+id/contrast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contrast" />

                <Button
                    android:id="@+id/brightness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brightness" />

            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/editorSelect"
            android:layout_width="370dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/filter"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:text="@string/filter" />

                <Button
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text" />
            </LinearLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
<!--    </ScrollView>-->
</layout>